Update resource sources: rename Emacs manual and add using guide

--- a/resources/resource_manifest.json
+++ b/resources/resource_manifest.json
@@ -1,8 +1,14 @@
 [
   {
     "id": "emacs-manual",
-    "path": "emacs.pdf",
+    "path": "gnu-emacs-manual.pdf",
     "type": "pdf",
     "description": "GNU Emacs manual"
+  },
+  {
+    "id": "using-emacs-guide",
+    "path": "use-gnu-emacs.pdf",
+    "type": "pdf",
+    "description": "Using GNU Emacs reference guide"
   }
 ]
