--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ langchain==0.1.20
 chromadb==0.4.24
 sentence-transformers==2.7.0
 streamlit==1.32.2
+fastapi==0.110.3
+uvicorn==0.29.0
 pypdf==4.2.0
