Phase 6: add prompt templates and structured local telemetry

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ emacs_db/
 # Downloaded source documents (not committed)
 data/sources/
 data/models/
+data/logs/
 
 # Streamlit caches
 .streamlit/
