--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 langchain==0.1.20
+langchain-community==0.0.38
+langchain-text-splitters==0.0.2
 chromadb==0.4.24
 sentence-transformers==2.7.0
 streamlit==1.32.2
